<resources>
    <string name="app_name" translatable="false">LoveHate</string>
    <string name="love">Love</string>
    <string name="neutral">Neutral</string>
    <string name="hate">Hate</string>
    <string name="new_messages">New messages</string>
    <string name="recent">Recent</string>
    <string name="new_topics">New</string>
    <string name="popular">Popular</string>
    <string name="most_loved">Most loved</string>
    <string name="most_hated">Most hated</string>
    <string name="topics">Topics</string>
    <string name="new_topic">New topic</string>
    <string name="love_percent_feeling">%s%% of love</string>
    <string name="hate_percent_feeling">%s%% of hate</string>
    <string name="debating">Debating</string>
    <string name="pick_media_hint">Pick media by search or\n upload from your device</string>
    <string name="carousel_indicator_hint">Carousel indicator</string>
    <string name="contribute_topic_name_hint">Topic</string>
    <string name="contribute_your_comment_hint">Your opinion</string>
    <string name="contribute_publish_button_text">Contribute</string>
    <string name="messages_count_template_multiple">out of %s opinions</string>
    <string name="messages_count_template_single">out of 1 opinion</string>
    <string name="opinions">Opinions</string>
    <string name="write_opinion">Post</string>
    <string name="similar_topics">Similar topics</string>
    <string name="posted_with_love">Created with love by</string>
    <string name="posted_with_neutral">Created with indifference by</string>
    <string name="posted_with_hate">Created with hate by</string>
    <string name="opinion_loves">loves</string>
    <string name="opinion_neutral">is indifferent to</string>
    <string name="opinion_hate">hates</string>
    <string name="most_active">Most active</string>
    <string name="most_many_sided">Most many-sided</string>
    <string name="most_tenderhearted">Most tenderhearted</string>
    <string name="most_spiteful">Most spiteful</string>
    <string name="most_obsessed">Most obsessed</string>
    <string name="most_liked">Most liked</string>
    <string name="most_disliked">Most disliked</string>
    <string name="users">Users</string>
    <string name="your_opinion_hint">Your opinion</string>
    <string name="attach_media">Attach media</string>
    <string name="ratings">Ratings</string>
    <string name="profile">Profile</string>
    <string name="add_up_to_4_photo">Attach up to 4 images</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_login_details">Please enter your login details</string>
    <string name="login_or_email">Login</string>
    <string name="login_signup">Login</string>
    <string name="login_button">Login</string>
    <string name="login_signup_button">Sign up</string>
    <string name="or_with">OR WITH</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet? <b>Register</b></string>
    <string name="registration">Create your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="login_error">Invalid login</string>
    <string name="password_error">Invalid password</string>
    <string name="passwords_match_error">Passwords do not match</string>
    <string name="invalid_token_error">Invalid token authorization.\nPlease try again later</string>
    <string name="internet_connection_error">Please check your internet connection</string>
    <string name="unknown_error">Something went wrong.\nPlease try again later. \nError: %s</string>
    <string name="the_name_is_already_taken_error">That name is already taken</string>
    <string name="wrong_username_or_password_error">Wrong username or password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="the_name_is_already_taken">The name is already taken</string>
    <string name="the_name_is_available">The name is available</string>
    <string name="must_be_at_least_6_characters">Must be at least 6 characters</string>
    <string name="my_topics">My topics</string>
    <string name="my_opinions">My opinions</string>
    <string name="my_comments">My comments</string>
    <string name="my_achievements">My rating</string>
    <string name="favorites">Favorites</string>
    <string name="app_settings">Settings</string>
    <string name="theme">App theme</string>
    <string name="light_theme">Light</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="send_feedback">Send feedback</string>
    <string name="dark_theme">Dark</string>
    <string name="send_feedback_hint">Any questions, suggestions for improvement or bug reports are welcome</string>
    <string name="send_button">Send</string>
    <string name="send_feedback_error_min_length">Please type at least 10 characters</string>
    <string name="surveyour">Surveyor</string>
    <string name="instigator">Instigator</string>
    <string name="enlightened">Enlightened</string>
    <string name="judge">Judge</string>
    <string name="forseti">Forseti</string>
    <string name="users_avatar">User\'s avatar</string>
    <string name="search">Search</string>
    <string name="your_opinion">Your opinion</string>
    <string name="at_least_1_photo">Please attach at least 1 photo for new topic</string>
    <string name="at_least_3_characters_is_required">Topic title must contain at least 3 characters</string>
    <string name="at_least_20_characters_is_required">Opinion must contain at least 15 characters</string>
    <string name="no_data_here">No data here</string>
    <string name="no_opinions_was_found">No opinions were found</string>
    <string name="no_topics_was_found">No topics were found</string>
    <string name="no_love_opinions_here_yet">No love opinions here yet</string>
    <string name="no_neutral_opinions_here_yet">No indifferent opinions here yet</string>
    <string name="no_hate_opinions_here_yet">No hate opinions here yet</string>
    <string name="welcome_signup_subtitle">Nothing but a login and password is needed</string>
    <string name="notification_channel_title_reactions">Reactions to your opinions</string>
    <string name="notification_like_reaction">%s liked your opinion</string>
    <string name="notification_dislike_reaction">%s did not like your opinion</string>
    <string name="no_images_error">No images in gallery on this device</string>
    <string name="show_more">Show more</string>

    <string name="icon_palette" translatable="false">&#xe904;</string>
    <string name="icon_cup" translatable="false">&#xe905;</string>
    <string name="icon_done" translatable="false">&#xe906;</string>
    <string name="icon_close" translatable="false">&#xe907;</string>
    <string name="icon_favorite_filled" translatable="false">&#xe903;</string>
    <string name="icon_like_filled" translatable="false">&#xe902;</string>
    <string name="icon_dislike_filled" translatable="false">&#xe901;</string>
    <string name="icon_padlock" translatable="false">&#xe90a;</string>
    <string name="icon_home" translatable="false">&#xe90b;</string>
    <string name="icon_feedback" translatable="false">&#xe90c;</string>
    <string name="icon_attention" translatable="false">&#xe90d;</string>
    <string name="icon_union" translatable="false">&#xe90e;</string>
    <string name="icon_arrow_back" translatable="false">&#xe910;</string>
    <string name="icon_arrow_next" translatable="false">&#xe911;</string>
    <string name="icon_filled_broken_heart" translatable="false">&#xe912;</string>
    <string name="icon_broken_heart" translatable="false">&#xe913;</string>
    <string name="icon_ratings" translatable="false">&#xe914;</string>
    <string name="icon_copy" translatable="false">&#xe915;</string>
    <string name="icon_write" translatable="false">&#xe916;</string>
    <string name="icon_filter" translatable="false">&#xe917;</string>
    <string name="icon_gallery" translatable="false">&#xe918;</string>
    <string name="icon_popup_handle" translatable="false">&#xe919;</string>
    <string name="icon_heart" translatable="false">&#xe91a;</string>
    <string name="icon_heart_filled" translatable="false">&#xe91b;</string>
    <string name="icon_messages" translatable="false">&#xe91c;</string>
    <string name="icon_more" translatable="false">&#xe91d;</string>
    <string name="icon_topics" translatable="false">&#xe91e;</string>
    <string name="icon_notification" translatable="false">&#xe91f;</string>
    <string name="icon_add_circle" translatable="false">&#xe920;</string>
    <string name="icon_profile" translatable="false">&#xe921;</string>
    <string name="icon_reply" translatable="false">&#xe922;</string>
    <string name="icon_search" translatable="false">&#xe923;</string>
    <string name="icon_send" translatable="false">&#xe924;</string>
    <string name="icon_favorite" translatable="false">&#xe925;</string>
    <string name="icon_dislike" translatable="false">&#xe926;</string>
    <string name="icon_like" translatable="false">&#xe927;</string>
    <string name="icon_upload" translatable="false">&#xe928;</string>
</resources>