<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kropotov.lovehate.ui.vm.contribute.ContributeVm" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarContract="@{viewModel.toolbar}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?background_color"
            android:padding="@dimen/standard_offset">

            <FrameLayout
                android:id="@+id/upload_media"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/round_stroked_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        style="@style/IconText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_gallery"
                        android:textColor="?unaccented_text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_media_hint"
                        android:textAlignment="center"
                        android:textColor="?unaccented_text_color" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.03"
                    android:contentDescription="@string/pick_media_hint"
                    android:scaleType="fitXY"
                    android:src="@drawable/chessboard_texture" />
            </FrameLayout>

            <ImageView
                android:id="@+id/carousel_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_offset"
                android:contentDescription="@string/carousel_indicator_hint"
                android:src="@drawable/carousel_indicator"
                app:layout_constraintEnd_toEndOf="@id/upload_media"
                app:layout_constraintStart_toStartOf="@id/upload_media"
                app:layout_constraintTop_toBottomOf="@id/upload_media" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_offset"
                app:cardCornerRadius="@dimen/default_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carousel_indicator">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ToggleButton
                            android:id="@+id/love_toggle_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/selector_contribute_love_button"
                            android:checked="true"
                            android:textAllCaps="false"
                            android:textColor="@drawable/selector_contribute_button_text_color"
                            android:textOff="@string/love"
                            android:textOn="@string/love"
                            app:onClick="@{viewModel::onLoveClicked}" />

                        <ToggleButton
                            android:id="@+id/neutral_toggle_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/selector_contribute_neutral_button"
                            android:textAllCaps="false"
                            android:textColor="@drawable/selector_contribute_button_text_color"
                            android:textOff="@string/neutral"
                            android:textOn="@string/neutral"
                            app:onClick="@{viewModel::onNeutralClicked}" />

                        <ToggleButton
                            android:id="@+id/hate_toggle_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/selector_contribute_hate_button"
                            android:textAllCaps="false"
                            android:textColor="@drawable/selector_contribute_button_text_color"
                            android:textOff="@string/hate"
                            android:textOn="@string/hate"
                            app:onClick="@{viewModel::onHateClicked}" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/topic_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/text_field_height"
                            android:background="@drawable/contribute_topic_name_background"
                            android:hint="@string/contribute_topic_name_hint"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="@integer/topic_title_max_length"
                            android:paddingStart="@dimen/big_offset"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/title_countdown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/small_offset"
                            android:layout_marginBottom="@dimen/tiny_offset"
                            android:textSize="@dimen/character_countdown_text_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="70" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <EditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/big_offset"
                android:background="@drawable/round_stroked_background"
                android:hint="@string/contribute_your_comment_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxHeight="@dimen/max_comment_height"
                android:maxLength="@integer/comment_max_length"
                android:minHeight="@dimen/text_field_height"
                android:paddingStart="@dimen/big_offset"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="0"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/commnet_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_offset"
                android:layout_marginBottom="@dimen/tiny_offset"
                android:textColor="?unaccented_text_color"
                android:textSize="@dimen/character_countdown_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/comment_edit_text"
                app:layout_constraintEnd_toEndOf="@+id/comment_edit_text"
                tools:text="1000" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height"
                android:text="@string/contribute_publish_button_text"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/default_corner_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/comment_edit_text"
                app:layout_constraintStart_toStartOf="@+id/comment_edit_text"
                app:onClick="@{viewModel::onPublishClicked}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
